fixes in start scripts for JDK 27